# ImZiv

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: release-package.yml
docs/: commit_convention.md  image_workflow.md  release_packaging.md
scripts/: package_release.ps1
src/: main.cpp
src/app/: app.cpp  app.hpp  ui.cpp  ui.hpp
src/core/: content_registry.cpp  content_registry.hpp  debug.cpp  imgui_extensions.cpp  imgui_extensions.hpp  task_manager.cpp  task_manager.hpp  unlocalized_string.cpp  unlocalized_string.hpp  view.cpp  view.hpp  view_tools.cpp  view_tools.hpp
src/platform/: native_dialog.cpp  native_dialog.hpp  platform_window.cpp  platform_window.hpp
src/tools/: angle_measurement_tool.cpp  angle_measurement_tool.hpp  color_picker_tool.cpp  color_picker_tool.hpp  measurement_tool.cpp  measurement_tool.hpp
src/viewer/: image_canvas.cpp  image_canvas.hpp  view_image_editor.cpp  view_image_editor.hpp
src/workflow/: image_workflow.cpp  image_workflow.hpp  image_workflow_nodes.cpp  image_workflow_nodes.hpp  view_image_workflow.cpp  view_image_workflow.hpp
src/workflow/nodes/: analysis.cpp  color.cpp  color_adjust.cpp  common.hpp  edge.cpp  filter.cpp  geometry.cpp  input.cpp  output.cpp  threshold.cpp
